single_nodes/app/argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress-http
  annotations: 
    #nginx.ingress.kubernetes.io/whitelist-source-range: "xxx.xxx.xxx.xxx" # whitelist office IP address
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k" 
    cert-manager.io/cluster-issuer: "letsencrypt" 
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:	
  ingressClassName: nginx
  tls:
    - hosts:
      - argocd.test-single-nodes.foxids.com
      secretName: argocd-ingress-tls
  rules:
  - host: argocd.test-single-nodes.foxids.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
